--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <body>
     <!-- Navbar start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">kenangan<span>senja</span>.</a>
+      <a href="#" class="navbar-logo">Teman <span>Sejatimu</span>.</a>
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">Tentang Kami</a>
         <a href="#menu">Menu</a>
-        <a href="#contact">Kontak Kami</a>
+        <a href="wa.me/6287775353803">Kontak Kami</a>
       </div>
 
       <div class="navbar-extra">
@@ -46,7 +46,7 @@
     <!-- Hero Section Start -->
     <section class="hero" id="home">
       <main class="content">
-        <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
+        <h1>Teman sejatimu ada <span>di sini</span></h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
           suscipit!
@@ -62,10 +62,10 @@
 
       <div class="row">
         <div class="about-img">
-          <img src="img/about.jpg" alt="Tentang Kami" />
+          <img src="img/logo.png" alt="Tentang Kami" />
         </div>
         <div class="content">
-          <h3>Alasan memilih kopi kami</h3>
+          <h3>alasan memilih kami</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem
             veritatis eius quisquam ducimus quasi perferendis.
@@ -82,7 +82,7 @@
 
     <!-- Menu Section Start -->
     <section id="menu" class="menu">
-      <h2><span>Menu</span> Kami</h2>
+      <h2><span>Koleksi</span> Kami</h2>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet
         praesentium reiciendis soluta iusto saepe non!
@@ -90,46 +90,40 @@
       <div class="menu-row">
         <div class="row">
           <div class="menu-card">
-            <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img" />
-            <h3 class="menu-card-title">- Espresso -</h3>
-            <p class="menu-card-price">IDR 19K</p>
+            <img src="img/groot.png" alt="Espresso" class="menu-card-img" />
+            <h3 class="menu-card-title">- Shoulder Plush -</h3>
+            <p class="menu-card-price">IDR 99K</p>
           </div>
-        </div>
         <div class="row">
           <div class="menu-card">
-            <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img" />
-            <h3 class="menu-card-title">- Espresso -</h3>
-            <p class="menu-card-price">IDR 19K</p>
+            <img src="img/groot.png" alt="Espresso" class="menu-card-img" />
+            <h3 class="menu-card-title">- Shoulder Plush -</h3>
+            <p class="menu-card-price">IDR 99K</p>
           </div>
-        </div>
         <div class="row">
           <div class="menu-card">
-            <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img" />
-            <h3 class="menu-card-title">- Espresso -</h3>
-            <p class="menu-card-price">IDR 19K</p>
+            <img src="img/groot.png" alt="Espresso" class="menu-card-img" />
+            <h3 class="menu-card-title">- Shoulder Plush -</h3>
+            <p class="menu-card-price">IDR 99K</p>
           </div>
-        </div>
         <div class="row">
           <div class="menu-card">
-            <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img" />
-            <h3 class="menu-card-title">- Espresso -</h3>
-            <p class="menu-card-price">IDR 19K</p>
+            <img src="img/groot.png" alt="Espresso" class="menu-card-img" />
+            <h3 class="menu-card-title">- Shoulder Plush -</h3>
+            <p class="menu-card-price">IDR 99K</p>
           </div>
-        </div>
         <div class="row">
           <div class="menu-card">
-            <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img" />
-            <h3 class="menu-card-title">- Espresso -</h3>
-            <p class="menu-card-price">IDR 19K</p>
+            <img src="img/groot.png" alt="Espresso" class="menu-card-img" />
+            <h3 class="menu-card-title">- Shoulder Plush -</h3>
+            <p class="menu-card-price">IDR 99K</p>
           </div>
-        </div>
         <div class="row">
           <div class="menu-card">
-            <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img" />
-            <h3 class="menu-card-title">- Espresso -</h3>
-            <p class="menu-card-price">IDR 19K</p>
+            <img src="img/groot.png" alt="Espresso" class="menu-card-img" />
+            <h3 class="menu-card-title">- Shoulder Plush -</h3>
+            <p class="menu-card-price">IDR 99K</p>
           </div>
-        </div>
       </div>
     </section>
     <!-- Menu Section End -->
