--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <!-- Footer Start -->
     <footer>
       <div class="socials">
-        <a href=""><i data-feather="instagram"></i></a>
+        <a href="https://instagram.com/teman.sejatimu?igshid=aGFrc3d5czE1OHA="><i data-feather="instagram"></i></a>
         <a href=""><i data-feather="twitter"></i></a>
         <a href=""><i data-feather="facebook"></i></a>
       </div>
